update on bio webpage

--- a/bio.html
+++ b/bio.html
@@ -31,8 +31,25 @@
 
     <p>The players which contain in this album are:</p>
     <li>Ronaldo</li>
+    <p>Ronaldo is a portuguese born player who has played for teams like manchester united and real madrid he is regarded as one of the top players in the world</p>
+    <p>more info</p>
+    <li>name: Cristiano Ronaldo</li>
+    <li>Country: Portugal</li>
+    <li>Age: 32</li>
+
     <li>Messi</li>
+    <p>messi is regarged as one of the all time greats by every one but theres is debate if he is the all time best due to his great way of the playing the game </p>
+    <p>more info</p>
+    <li>name: Lionel Messi</li>
+    <li>Country: Argentina</li>
+    <li>Age: 29</li>
+
     <li>Neymar</li>
+    <p>Nyemar is one the most upcoming talents in the world he being reagrded as the heir to the throne after Messi and Ronalso retire</p>
+    <p>more info</p>
+    <li>name: neymar jr</li>
+    <li>Country: Brazil</li>
+    <li>Age: 25</li>
 
 
     <footer class="footer">  <p>webpage of Abdullahi</p>
