changing the style

--- a/bio.html
+++ b/bio.html
@@ -26,7 +26,7 @@
   <h1>collection biography</h1>
   <body>
     <p>
-      This collection will be about three players regarded as the best of their ara and i will display pcitures of them and their club and country badges.
+      This collection will be about three players regarded as the best of their ara and i will display pictures of them and their club and country badges.
     </p>
 
     <p>The players which contain in this album are:</p>
@@ -52,7 +52,7 @@
     <li>Age: 25</li>
 
 
-    <footer class="footer">  <p>webpage of Abdullahi</p>
+    <footer class="footer">  <p>Created by Abdullahi</p>
     <p>Contact Email: Abdull@hotmail.co.uk</p>
 
 
